Tweak meli's project to avoid crop/scrollbar

--- a/client/scss/_work.scss
+++ b/client/scss/_work.scss
@@ -49,6 +49,11 @@
         display: inline;
     }
 
+    object {
+        pointer-events: none;
+        height: 4em;
+    }
+
     .toggleTypeface {
         appearance: none;
         color: inherit;
